# themerrr

./: CMakeLists.txt  Makefile  README
src/: CMakeLists.txt  gtk.c  main.c  qt.c  themerrr.h
